--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,23 @@
   <artifactId>CodecraftClient</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>CodecraftClient</name>
+  <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>codecraft.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
   <properties>
 	<lwjgl.version>3.2.3</lwjgl.version>
 	<joml.version>1.10.1</joml.version>
