--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,12 @@
    <artifactId>legui</artifactId>
    <version>3.3.2</version>
 </dependency>
+	<!-- https://mvnrepository.com/artifact/org.l33tlabs.twl/pngdecoder -->
+<dependency>
+    <groupId>org.l33tlabs.twl</groupId>
+    <artifactId>pngdecoder</artifactId>
+    <version>1.0</version>
+</dependency>
 	
 </dependencies>
 </project>
